Changelog for modclassvar

1.1.9-beta (17.10.2016)
==============
- Fix "option" getlist.class.php

1.1.8-beta (17.10.2016)
==============
- Add "group" to "getValues"

1.1.7-beta (17.10.2016)
==============
- Add filter "variable" by "section"

1.1.6-beta (17.10.2016)
==============
- Add "section_name" to combobox

1.1.5-beta (22.09.2016)
==============
- Improvement "modclassvar-combo-resources", "modclassvar-combo-users"

1.1.4-beta (17.09.2016)
==============
- Improvement "modClassVar.wrapper" snippet

1.1.3-beta (16.09.2016)
==============
- Add "modClassVar.wrapper" snippet

1.1.2-beta (16.09.2016)
==============
- Fix "thumb" css

1.1.1-beta (05.08.2016)
==============
- Fix "findParentByType" Extjs

1.1.0-beta (03.08.2016)
==============
- Add "source"

1.0.9-beta (31.07.2016)
==============
- Add "priority" to plugins

1.0.8-beta (31.07.2016)
==============
- Change "prefix_key"

1.0.7-beta (23.07.2016)
==============
- Improvement "getValues"

1.0.6-beta (19.07.2016)
==============
- Improvement "section"

1.0.5-beta (12.07.2016)
==============
- Fix "inject"
- Add "shit" (TODO)

1.0.4-beta (12.07.2016)
==============
- Fix "setting"

1.0.3-beta (12.07.2016)
==============
- Add "setting"

1.0.0-beta (30.06.2016)
==============
- Initial