@@ -182,6 +182,7 @@ modclassvar.combo.FieldType = function (config) {
 				'{"type":"textarea"}',
 				'{"type":"modx-combo-boolean"}',
 				'{"type":"modx-combo-user"}',
+				'{"type":"modclassvar-combo-chunk"}',
 				'{"type":"modclassvar-combo-user"}',
 				'{"type":"modclassvar-combo-users"}',
 				'{"type":"modclassvar-combo-autocomplete"}',
@@ -1810,3 +1811,107 @@ Ext.extend(modclassvar.combo.Users, Ext.ux.form.SuperBoxSelect, {
 	}
 });
 Ext.reg('modclassvar-combo-users', modclassvar.combo.Users);
+
+
+
+modclassvar.combo.Chunk = function(config) {
+	config = config || {};
+
+	if (config.custm) {
+		config.triggerConfig = [{
+			tag: 'div',
+			cls: 'x-field-search-btns',
+			style: String.format('width: {0}px;', config.clear?62:31),
+			cn: [{
+				tag: 'div',
+				cls: 'x-form-trigger x-field-modclassvar-chunk-go'
+			}]
+		}];
+		if (config.clear) {
+			config.triggerConfig[0].cn.push({
+				tag: 'div',
+				cls: 'x-form-trigger x-field-modclassvar-chunk-clear'
+			});
+		}
+
+		config.initTrigger = function() {
+			var ts = this.trigger.select('.x-form-trigger', true);
+			this.wrap.setStyle('overflow', 'hidden');
+			var triggerField = this;
+			ts.each(function(t, all, index) {
+				t.hide = function() {
+					var w = triggerField.wrap.getWidth();
+					this.dom.style.display = 'none';
+					triggerField.el.setWidth(w - triggerField.trigger.getWidth());
+				};
+				t.show = function() {
+					var w = triggerField.wrap.getWidth();
+					this.dom.style.display = '';
+					triggerField.el.setWidth(w - triggerField.trigger.getWidth());
+				};
+				var triggerIndex = 'Trigger' + (index + 1);
+
+				if (this['hide' + triggerIndex]) {
+					t.dom.style.display = 'none';
+				}
+				t.on('click', this['on' + triggerIndex + 'Click'], this, {
+					preventDefault: true
+				});
+				t.addClassOnOver('x-form-trigger-over');
+				t.addClassOnClick('x-form-trigger-click');
+			}, this);
+			this.triggers = ts.elements;
+		};
+	}
+	Ext.applyIf(config, {
+		name: config.name || 'chunk',
+		hiddenName: config.name || 'chunk',
+		displayField: config.displayField || 'name',
+		valueField: 'id',
+		editable: true,
+		fields: ['name', 'id'],
+		pageSize: 10,
+		emptyText: _('modclassvar_combo_select'),
+		hideMode: 'offsets',
+		url: modclassvar.config.connector_url,
+		baseParams: {
+			action: 'mgr/misc/chunk/getlist',
+			combo: true,
+		},
+		tpl: new Ext.XTemplate(
+			'<tpl for="."><div class="x-combo-list-item">',
+			'<small>({id})</small> <b>{name}</b>',
+			'</div></tpl>',
+			{
+				compiled: true
+			}),
+		cls: 'input-combo-modclassvar-chunk',
+		clearValue: function() {
+			if (this.hiddenField) {
+				this.hiddenField.value = '';
+			}
+			this.setRawValue('');
+			this.lastSelectionText = '';
+			this.applyEmptyText();
+			this.value = '';
+			this.fireEvent('select', this, null, 0);
+		},
+
+		getTrigger: function(index) {
+			return this.triggers[index];
+		},
+
+		onTrigger1Click: function() {
+			this.onTriggerClick();
+		},
+
+		onTrigger2Click: function() {
+			this.clearValue();
+		}
+	});
+	modclassvar.combo.Chunk.superclass.constructor.call(this, config);
+
+};
+Ext.extend(modclassvar.combo.Chunk, MODx.combo.ComboBox);
+Ext.reg('modclassvar-combo-chunk', modclassvar.combo.Chunk);
+
