@@ -3,6 +3,7 @@ Changelog for modclassvar
 1.1.9-beta (17.10.2016)
 ==============
 - Fix "option" getlist.class.php
+- Add "modclassvar-combo-chunk"
 
 1.1.8-beta (17.10.2016)
 ==============
